--- a/app/src/main/res/layout/menu_top.xml
+++ b/app/src/main/res/layout/menu_top.xml
@@ -14,10 +14,11 @@
             android:background="@color/theme_1_color_1"
             app:layout_constraintTop_toTopOf="parent"
     />
-    <androidx.appcompat.widget.SearchView
-            android:id="@+id/search_view"
+    <AutoCompleteTextView
+            android:id="@+id/search_view_real"
+            android:dropDownAnchor="@+id/toolbar"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             app:layout_constraintStart_toEndOf="@+id/bars"
@@ -25,6 +26,8 @@
             app:layout_constraintEnd_toStartOf="@+id/list"
             app:layout_constraintBottom_toBottomOf="@+id/toolbar"
             android:background="@color/white"
+            android:completionThreshold="1"
+            android:singleLine="true"
     />
     <Button
             android:id="@+id/bars"
