--- a/app/src/main/res/layout/authorization_phone.xml
+++ b/app/src/main/res/layout/authorization_phone.xml
@@ -1,77 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
->
-    <ImageView
-            android:id="@+id/background"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_margin="16dp"
-            android:background="@drawable/shape_card"
-    />
-    <include
-            android:id="@+id/include_social_network"
-            layout="@layout/c_social_network"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_marginTop="16dp"
-    />
-    <EditText
-            android:id="@+id/phone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/include_social_network"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_marginTop="16dp"
-            android:layout_marginHorizontal="16dp"
-            style="@style/text_color_and_size"
-            android:inputType="phone"
-            android:hint="@string/phone"
-    />
-    <Button
-            android:id="@+id/phone_code_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toBottomOf="@+id/phone"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_marginTop="16dp"
-            android:text="@string/phone_code_send"
-    />
-    <EditText
-            android:id="@+id/phone_code"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/phone_code_send"
-            app:layout_constraintStart_toStartOf="@+id/phone"
-            app:layout_constraintEnd_toEndOf="@+id/phone"
-            android:layout_marginTop="16dp"
-            style="@style/text_color_and_size"
-            android:inputType="numberPassword"
-            android:hint="@string/phone_code"
-    />
-    <Button
-            android:id="@+id/enter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/phone_code"
-            app:layout_constraintStart_toStartOf="@+id/background"
-            app:layout_constraintEnd_toEndOf="@+id/background"
-            android:layout_marginTop="16dp"
-            android:background="@drawable/shape_button"
-            android:text="@string/enter"
-    />
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	android:layout_width = "match_parent"
+	android:layout_height = "match_parent"
+	tools:context = ".MainActivity">
+	<ImageView android:id = "@+id/background"
+		android:layout_width = "match_parent"
+		android:layout_height = "0dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintBottom_toBottomOf = "parent"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_margin = "16dp"
+		android:background = "@drawable/shape_card"/>
+	<include android:id = "@+id/include_social_network"
+		layout = "@layout/c_social_network"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toTopOf = "@+id/background"
+		app:layout_constraintStart_toStartOf = "@+id/background"
+		app:layout_constraintEnd_toEndOf = "@+id/background"
+		android:layout_marginTop = "16dp"/>
+	<EditText android:id = "@+id/phone"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/include_social_network"
+		app:layout_constraintStart_toStartOf = "@+id/background"
+		app:layout_constraintEnd_toEndOf = "@+id/background"
+		android:layout_marginTop = "16dp"
+		android:layout_marginHorizontal = "16dp"
+		style = "@style/text_color_and_size"
+		android:inputType = "phone"
+		android:hint = "@string/phone"/>
+	<Button android:id = "@+id/phone_code_send"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/phone"
+		app:layout_constraintStart_toStartOf = "@+id/background"
+		app:layout_constraintEnd_toEndOf = "@+id/background"
+		android:layout_marginTop = "16dp"
+		android:background = "@drawable/shape_button"
+		android:text = "@string/phone_code_send"/>
+	<EditText android:id = "@+id/phone_code"
+		android:layout_width = "0dp"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/phone_code_send"
+		app:layout_constraintStart_toStartOf = "@+id/phone"
+		app:layout_constraintEnd_toEndOf = "@+id/phone"
+		android:layout_marginTop = "16dp"
+		style = "@style/text_color_and_size"
+		android:inputType = "numberPassword"
+		android:hint = "@string/phone_code"/>
+	<Button android:id = "@+id/enter"
+		android:layout_width = "wrap_content"
+		android:layout_height = "wrap_content"
+		app:layout_constraintTop_toBottomOf = "@+id/phone_code"
+		app:layout_constraintStart_toStartOf = "@+id/background"
+		app:layout_constraintEnd_toEndOf = "@+id/background"
+		android:layout_marginTop = "16dp"
+		android:background = "@drawable/shape_button"
+		android:text = "@string/enter"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
