--- a/app/src/main/res/layout/c_search_vacancy_item.xml
+++ b/app/src/main/res/layout/c_search_vacancy_item.xml
@@ -3,18 +3,20 @@
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	android:layout_width = "match_parent"
 	android:layout_height = "match_parent">
-	<include android:id = "@+id/include_01"
-		layout = "@layout/c_menu_top"
+	<TextView android:id = "@+id/item"
 		android:layout_width = "match_parent"
 		android:layout_height = "wrap_content"
 		app:layout_constraintTop_toTopOf = "parent"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"/>
-	<include android:id = "@+id/include_02"
-		layout = "@layout/c_menu_bottom"
+		app:layout_constraintEnd_toEndOf = "parent"
+		style = "@style/text_color_and_size"
+		android:text = "@string/search_item"
+		android:padding = "16dp"/>
+	<View android:id = "@+id/divider"
 		android:layout_width = "match_parent"
-		android:layout_height = "wrap_content"
-		app:layout_constraintBottom_toBottomOf = "parent"
+		android:layout_height = "1dp"
+		app:layout_constraintTop_toBottomOf = "@+id/item"
 		app:layout_constraintStart_toStartOf = "parent"
-		app:layout_constraintEnd_toEndOf = "parent"/>
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:background = "@color/theme_1_hover"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
