--- a/app/src/main/res/layout/c_social_network.xml
+++ b/app/src/main/res/layout/c_social_network.xml
@@ -1,132 +1,108 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:context=".MainActivity"
->
-
-    <ImageButton
-            android:id="@+id/button_01"
-            app:srcCompat="@drawable/ic_user"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/button_04"
-            app:layout_constraintEnd_toStartOf="@+id/button_02"
-            app:layout_constraintBottom_toBottomOf="@+id/button_04"
-            android:layout_marginEnd="12dp"
-    />
-    <ImageButton
-            android:id="@+id/button_02"
-            app:srcCompat="@drawable/ic_phone"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/button_04"
-            app:layout_constraintEnd_toStartOf="@+id/button_03"
-            app:layout_constraintBottom_toBottomOf="@+id/button_04"
-            android:layout_marginEnd="12dp"
-    />
-    <ImageButton
-            android:id="@+id/button_03"
-            app:srcCompat="@drawable/ic_vk"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/button_04"
-            app:layout_constraintEnd_toStartOf="@+id/button_04"
-            app:layout_constraintBottom_toBottomOf="@+id/button_04"
-            android:layout_marginEnd="12dp"
-    />
-    <ImageButton
-            android:id="@+id/button_04"
-            app:srcCompat="@drawable/ic_ok"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/bottom_09"
-            app:layout_constraintEnd_toEndOf="@+id/bottom_10"
-    />
-    <ImageButton
-            android:id="@+id/button_05"
-            app:srcCompat="@drawable/ic_instagram"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/button_04"
-            app:layout_constraintStart_toEndOf="@+id/button_04"
-            app:layout_constraintBottom_toBottomOf="@+id/button_04"
-            android:layout_marginStart="12dp"
-    />
-    <ImageButton
-            android:id="@+id/button_06"
-            app:srcCompat="@drawable/ic_telegram"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/button_04"
-            app:layout_constraintStart_toEndOf="@+id/button_05"
-            app:layout_constraintBottom_toBottomOf="@+id/button_04"
-            android:layout_marginStart="12dp"
-    />
-    <ImageButton
-            android:id="@+id/bottom_07"
-            app:srcCompat="@drawable/ic_gmail"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/bottom_09"
-            app:layout_constraintEnd_toStartOf="@+id/bottom_08"
-            app:layout_constraintBottom_toBottomOf="@+id/bottom_09"
-            android:layout_marginEnd="12dp"
-    />
-    <ImageButton
-            android:id="@+id/bottom_08"
-            app:srcCompat="@drawable/ic_facebook"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/bottom_09"
-            app:layout_constraintEnd_toStartOf="@+id/bottom_09"
-            app:layout_constraintBottom_toBottomOf="@+id/bottom_09"
-            android:layout_marginEnd="12dp"
-    />
-    <ImageButton
-            android:id="@+id/bottom_09"
-            app:srcCompat="@drawable/ic_mail_ru"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toBottomOf="@+id/button_04"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-    />
-    <ImageButton
-            android:id="@+id/bottom_10"
-            app:srcCompat="@drawable/ic_discord"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/bottom_09"
-            app:layout_constraintStart_toEndOf="@+id/bottom_09"
-            app:layout_constraintBottom_toBottomOf="@+id/bottom_09"
-            android:layout_marginStart="12dp"
-    />
-    <ImageButton
-            android:id="@+id/bottom_11"
-            app:srcCompat="@drawable/ic_microsoft"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:background="@drawable/shape_button"
-            app:layout_constraintTop_toTopOf="@+id/bottom_09"
-            app:layout_constraintStart_toEndOf="@+id/bottom_10"
-            app:layout_constraintBottom_toBottomOf="@+id/bottom_09"
-            android:layout_marginStart="12dp"
-    />
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+	xmlns:app = "http://schemas.android.com/apk/res-auto"
+	xmlns:tools = "http://schemas.android.com/tools"
+	android:layout_width = "wrap_content"
+	android:layout_height = "wrap_content"
+	tools:context = ".MainActivity">
+	<ImageButton android:id = "@+id/button_01"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/button_04"
+		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
+		app:layout_constraintEnd_toStartOf = "@+id/button_02"
+		android:layout_marginEnd = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_user"/>
+	<ImageButton android:id = "@+id/button_02"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/button_04"
+		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
+		app:layout_constraintEnd_toStartOf = "@+id/button_03"
+		android:layout_marginEnd = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_phone"/>
+	<ImageButton android:id = "@+id/button_03"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/button_04"
+		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
+		app:layout_constraintEnd_toStartOf = "@+id/button_04"
+		android:layout_marginEnd = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_vk"/>
+	<ImageButton android:id = "@+id/button_04"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "parent"
+		app:layout_constraintStart_toStartOf = "@+id/bottom_09"
+		app:layout_constraintEnd_toEndOf = "@+id/bottom_10"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_ok"/>
+	<ImageButton android:id = "@+id/button_05"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/button_04"
+		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
+		app:layout_constraintStart_toEndOf = "@+id/button_04"
+		android:layout_marginStart = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_instagram"/>
+	<ImageButton android:id = "@+id/button_06"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/button_04"
+		app:layout_constraintBottom_toBottomOf = "@+id/button_04"
+		app:layout_constraintStart_toEndOf = "@+id/button_05"
+		android:layout_marginStart = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_telegram"/>
+	<ImageButton android:id = "@+id/bottom_07"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
+		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
+		app:layout_constraintEnd_toStartOf = "@+id/bottom_08"
+		android:layout_marginEnd = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_gmail"/>
+	<ImageButton android:id = "@+id/bottom_08"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
+		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
+		app:layout_constraintEnd_toStartOf = "@+id/bottom_09"
+		android:layout_marginEnd = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_facebook"/>
+	<ImageButton android:id = "@+id/bottom_09"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toBottomOf = "@+id/button_04"
+		app:layout_constraintStart_toStartOf = "parent"
+		app:layout_constraintEnd_toEndOf = "parent"
+		android:layout_marginTop = "12dp"
+		android:layout_marginStart = "16dp"
+		android:layout_marginEnd = "16dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_mail_ru"/>
+	<ImageButton android:id = "@+id/bottom_10"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
+		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
+		app:layout_constraintStart_toEndOf = "@+id/bottom_09"
+		android:layout_marginStart = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_discord"/>
+	<ImageButton android:id = "@+id/bottom_11"
+		android:layout_width = "48dp"
+		android:layout_height = "48dp"
+		app:layout_constraintTop_toTopOf = "@+id/bottom_09"
+		app:layout_constraintBottom_toBottomOf = "@+id/bottom_09"
+		app:layout_constraintStart_toEndOf = "@+id/bottom_10"
+		android:layout_marginStart = "12dp"
+		android:background = "@drawable/shape_button"
+		app:srcCompat = "@drawable/ic_microsoft"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
