--- a/app/src/main/res/menu/bottom.xml
+++ b/app/src/main/res/menu/bottom.xml
@@ -1,29 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-            android:id="@+id/bottom_01"
-            android:icon="@drawable/ic_search"
-            android:title="@string/menu_bottom_1"
-    />
-    <item
-            android:id="@+id/bottom_02"
-            android:icon="@drawable/ic_bell"
-            android:title="@string/menu_bottom_2"
-    />
-    <item
-            android:id="@+id/bottom_03"
-            android:icon="@drawable/ic_comments"
-            android:title="@string/menu_bottom_3"
-    />
-    <item
-            android:id="@+id/bottom_04"
-            android:icon="@drawable/ic_calendar"
-            android:title="@string/menu_bottom_4"
-    />
-    <item
-            android:id="@+id/bottom_5"
-            android:icon="@drawable/ic_user"
-            android:title="@string/menu_bottom_5"
-    />
+<menu xmlns:android = "http://schemas.android.com/apk/res/android">
+	<item android:id = "@+id/bottom_01"
+		android:icon = "@drawable/ic_search"
+		android:title = "@string/menu_bottom_1"/>
+	<item android:id = "@+id/bottom_02"
+		android:icon = "@drawable/ic_bell"
+		android:title = "@string/menu_bottom_2"/>
+	<item android:id = "@+id/bottom_03"
+		android:icon = "@drawable/ic_comments"
+		android:title = "@string/menu_bottom_3"/>
+	<item android:id = "@+id/bottom_04"
+		android:icon = "@drawable/ic_calendar"
+		android:title = "@string/menu_bottom_4"/>
+	<item android:id = "@+id/bottom_5"
+		android:icon = "@drawable/ic_user"
+		android:title = "@string/menu_bottom_5"/>
 </menu>
