--- a/app/src/main/res/menu/bottom_profile_logged_in.xml
+++ b/app/src/main/res/menu/bottom_profile_logged_in.xml
@@ -1,36 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <group>
-        <item
-                android:id="@+id/bottom_01"
-                android:title="@string/menu_bottom_profile_logged_in_1"
-        />
-        <item
-                android:id="@+id/bottom_02"
-                android:title="@string/menu_bottom_profile_logged_in_2"
-        />
-    </group>
-    <group>
-        <item
-                android:id="@+id/bottom_03"
-                android:title="@string/menu_bottom_profile_logged_in_3"
-        />
-        <item
-                android:id="@+id/bottom_04"
-                android:title="@string/menu_bottom_profile_logged_in_4"
-        />
-    </group>
-    <group>
-        <item
-                android:id="@+id/bottom_5"
-                android:title="@string/menu_bottom_profile_logged_in_5"
-        />
-    </group>
-    <group>
-        <item
-                android:id="@+id/bottom_8"
-                android:title="@string/menu_bottom_profile_logged_in_8"
-        />
-    </group>
+<menu xmlns:android = "http://schemas.android.com/apk/res/android">
+	<group>
+		<item android:id = "@+id/bottom_01"
+			android:title = "@string/menu_bottom_profile_logged_in_1"/>
+		<item android:id = "@+id/bottom_02"
+			android:title = "@string/menu_bottom_profile_logged_in_2"/>
+	</group>
+	<group>
+		<item android:id = "@+id/bottom_03"
+			android:title = "@string/menu_bottom_profile_logged_in_3"/>
+		<item android:id = "@+id/bottom_04"
+			android:title = "@string/menu_bottom_profile_logged_in_4"/>
+	</group>
+	<group>
+		<item android:id = "@+id/bottom_5"
+			android:title = "@string/menu_bottom_profile_logged_in_5"/>
+	</group>
+	<group>
+		<item android:id = "@+id/bottom_8"
+			android:title = "@string/menu_bottom_profile_logged_in_8"/>
+	</group>
 </menu>
