--- a/app/src/main/res/menu/card_vacancy.xml
+++ b/app/src/main/res/menu/card_vacancy.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item
-            android:id="@+id/bottom_01"
-            android:icon="@drawable/ic_write"
-            android:title="@string/card_vacancy_close_menu_1"
-    />
-    <item
-            android:id="@+id/bottom_02"
-            android:icon="@drawable/ic_phone"
-            android:title="@string/card_vacancy_close_menu_2"
-    />
-    <item
-            android:id="@+id/bottom_03"
-            android:icon="@drawable/ic_respond"
-            android:title="@string/card_vacancy_close_menu_3"
-    />
+<menu xmlns:android = "http://schemas.android.com/apk/res/android">
+	<item android:id = "@+id/bottom_01"
+		android:icon = "@drawable/ic_write"
+		android:title = "@string/card_vacancy_close_menu_1"/>
+	<item android:id = "@+id/bottom_02"
+		android:icon = "@drawable/ic_phone"
+		android:title = "@string/card_vacancy_close_menu_2"/>
+	<item android:id = "@+id/bottom_03"
+		android:icon = "@drawable/ic_respond"
+		android:title = "@string/card_vacancy_close_menu_3"/>
 </menu>
