--- a/app/src/main/res/layout/c_menu_bottom.xml
+++ b/app/src/main/res/layout/c_menu_bottom.xml
@@ -17,5 +17,6 @@
             app:menu="@menu/bottom"
             app:itemIconTint="@drawable/selector_menu"
             app:itemTextColor="@drawable/selector_menu"
-            app:labelVisibilityMode="labeled"/>
+            app:labelVisibilityMode="labeled"
+            android:visibility="gone"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
