--- a/app/src/main/res/menu/bottom.xml
+++ b/app/src/main/res/menu/bottom.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android = "http://schemas.android.com/apk/res/android">
-	<item android:id = "@+id/bottom_01"
+	<item android:id = "@+id/bottom_menu_search"
 		android:icon = "@drawable/ic_search"
 		android:title = "@string/menu_bottom_1"/>
-	<item android:id = "@+id/bottom_02"
+	<item android:id = "@+id/bottom_menu_notification"
 		android:icon = "@drawable/ic_bell"
 		android:title = "@string/menu_bottom_2"/>
-	<item android:id = "@+id/bottom_03"
+	<item android:id = "@+id/bottom_menu_chat"
 		android:icon = "@drawable/ic_comments"
 		android:title = "@string/menu_bottom_3"/>
-	<item android:id = "@+id/bottom_4"
+	<item android:id = "@+id/bottom_menu_profile"
 		android:icon = "@drawable/ic_user"
 		android:title = "@string/menu_bottom_5"/>
 </menu>
