--- a/app/src/main/res/layout/c_card_vacancy_close.xml
+++ b/app/src/main/res/layout/c_card_vacancy_close.xml
@@ -3,7 +3,7 @@
 	xmlns:app = "http://schemas.android.com/apk/res-auto"
 	xmlns:tools = "http://schemas.android.com/tools"
 	android:layout_width = "match_parent"
-	android:layout_height = "match_parent"
+	android:layout_height = "wrap_content"
 	tools:context = ".MainActivity">
 	<ScrollView android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
@@ -12,7 +12,7 @@
 		app:layout_constraintStart_toStartOf = "parent"
 		app:layout_constraintEnd_toEndOf = "parent">
 		<androidx.constraintlayout.widget.ConstraintLayout android:layout_width = "match_parent"
-			android:layout_height = "match_parent">
+			android:layout_height = "wrap_content">
 			<ImageView android:id = "@+id/background"
 				android:layout_width = "match_parent"
 				android:layout_height = "0dp"
@@ -20,9 +20,9 @@
 				app:layout_constraintBottom_toBottomOf = "@+id/menu"
 				app:layout_constraintStart_toStartOf = "parent"
 				app:layout_constraintEnd_toEndOf = "parent"
-				android:layout_marginTop = "16dp"
-				android:layout_marginStart = "16dp"
-				android:layout_marginEnd = "16dp"
+				android:layout_marginTop = "8dp"
+				android:layout_marginStart = "8dp"
+				android:layout_marginEnd = "8dp"
 				android:background = "@drawable/shape_card"/>
 			<TextView android:id = "@+id/name"
 				android:layout_width = "wrap_content"
@@ -378,7 +378,9 @@
 				app:menu = "@menu/card_vacancy"
 				app:itemIconTint = "@color/font_color"
 				app:itemTextColor = "@color/font_color"
-				app:labelVisibilityMode = "labeled"></com.google.android.material.bottomnavigation.BottomNavigationView>
+				app:labelVisibilityMode = "labeled">
+
+			</com.google.android.material.bottomnavigation.BottomNavigationView>
 		</androidx.constraintlayout.widget.ConstraintLayout>
 	</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
